--- a/src/app/components/parametro/yang-guan/yang-guan.component.html
+++ b/src/app/components/parametro/yang-guan/yang-guan.component.html
@@ -1,5 +1,4 @@
-<app-parametro>
-
+<app-parametro [parametro]="parametro">
     <div class="container box">
         <div class="params">
             <h2>Parâmetros</h2>
@@ -7,51 +6,51 @@
                 <div class="separacao">
                     <div>
                         <span>TEMPO ENVIAR 1:</span>
-                        <p>2.0</p>
+                        <p>{{parametro.tempoEnvio1}}</p>
                     </div>
                     <div>
                         <span>TEMPO ENVIAR 2:</span>
-                        <p>1.0</p>
+                        <p>{{parametro.tempoEnvio2}}</p>
                     </div>
                 </div>
                 <div class="separacao">
                     <div>
                         <span>ATRASO ENTRADA BRAÇO</span>
-                        <p>0.5</p>
+                        <p>{{parametro.atrasoEntradaBraco}}</p>
                     </div>
                     <div>
                         <span>RETARDO PARA VENTOSA</span>
-                        <p>0.5</p>
+                        <p>{{parametro.retardoVentosa}}</p>
                     </div>
                 </div>
                 <div class="separacao">
                     <div>
                         <span>ATRASO SAÍDA BRAÇO (2 á 3.5) "Dianteiro"</span>
-                        <p>2.0</p>
+                        <p>{{parametro.atrasoSaidaBracoDianteira}}</p>
                     </div>
                     <div>
                         <span>ATRASO SAÍDA BRAÇO (2 á 3.5) "Traseiro"</span>
-                        <p>2.0</p>
+                        <p>{{parametro.atrasoSaidaBracoTraseira}}</p>
                     </div>
                 </div>
                 <div class="separacao">
                     <div>
                         <span>TEMPO A MAIS DE GIRO (2 á 3.5) "Dianteiro"</span>
-                        <p>2.5</p>
+                        <p>{{parametro.tempoGiroDianteira}}</p>
                     </div>
                     <div>
                         <span>TEMPO A MAIS DE GIRO (2 á 3.5) "Traseiro"</span>
-                        <p>2.5</p>
+                        <p>{{parametro.tempoGiroTraseira}}</p>
                     </div>
                 </div>
                 <div class="separacao">
                     <div>
                         <span>Velocidade Giro Esq. Lixa</span>
-                        <p>27 ± 2</p>
+                        <p>{{parametro.velocidadeLixEsq}}</p>
                     </div>
                     <div>
                         <span>Velocidade Giro Diret. Lixa</span>
-                        <p>27 ± 2</p>
+                        <p>{{parametro.velocidadeLapDireita}}</p>
                     </div>
                 </div>
             </div>
@@ -62,19 +61,20 @@
                 <h2>Qtd voltas</h2>
                 <div>
                     <span>QTD DE VOLTAS FRONTAL</span>
-                    <p>1</p>
+                    <p>{{parametro.qtdVoltasFrontal}}</p>
                 </div>
                 <div>
                     <span>QTD DE VOLTAS TRASEIRO</span>
-                    <p>1</p>
+                    <p>{{parametro.qtdVoltasTraseira}}</p>
                 </div>
+                <h2>Pressão</h2>
                 <div>
                     <span>PRESSÃO LAPIDADO</span>
-                    <p>N/A</p>
+                    <p>{{parametro.pressaoLapidado}}</p>
                 </div>
                 <div>
                     <span>PRESSÃO LIXADO</span>
-                    <p>1.5 (+/- 1)</p>
+                    <p>{{parametro.pressaoLixado}}</p>
                 </div>
             </div>
         </div>
