--- a/src/app/components/parametro/parametro.component.html
+++ b/src/app/components/parametro/parametro.component.html
@@ -3,28 +3,28 @@
         <div>
             <div class="gap">
                 <span>Part Number:</span>
-                <p>6003770</p>
+                <p>{{parametro.partNumber}}</p>
             </div>
             <div class="gap">
                 <span>Linha:</span>
-                <p>4</p>
+                <p>{{parametro.linha}}</p>
             </div>
         </div>
         <div class="gap">
             <span>Data revisão:</span>
-            <p>15/01/2024</p>
+            <p>{{parametro.dataRevisao}}</p>
         </div>
         <div class="gap">
             <span>Máquina:</span>
-            <p>Nanjing</p>
+            <p>{{parametro.maquina === "YG" ? "Yang Guan" : "Nanjing"}}</p>
         </div>
         <div class="gap">
             <span>Nome programa de corte:</span>
-            <p>6003770</p>
+            <p>{{parametro.nomeProgramaCorte}}</p>
         </div>
         <div class="gap">
             <span>Videa:</span>
-            <p>150</p>
+            <p>{{parametro.anguloVidea}}</p>
         </div>
     </div>
 
@@ -69,7 +69,7 @@
             <h2>Lavadora</h2>
             <div class="gap">
                 <span>Temperatura:</span>
-                <p>100 ± 20</p>
+                <p>{{parametro.temperaturaLavadora}}</p>
             </div>
         </div>
 
