style: quebra linha

--- a/src/app/components/parametro/parametro.component.html
+++ b/src/app/components/parametro/parametro.component.html
@@ -90,7 +90,7 @@
 
                 <!-- Weight Column -->
                 <ng-container matColumnDef="raio">
-                    <mat-header-cell *matHeaderCellDef> Raio de Curvatura </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef> Raio de <br> Curvatura </mat-header-cell>
                     <mat-cell *matCellDef="let element"> {{element.raio}} </mat-cell>
                 </ng-container>
 
