style: formato data

--- a/src/app/components/parametro/parametro.component.html
+++ b/src/app/components/parametro/parametro.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="gap">
             <span>Data revisão:</span>
-            <p>{{parametro.dataRevisao}}</p>
+            <p>{{parametro.dataRevisao | date: 'dd/MM/yyyy'}}</p>
         </div>
         <div class="gap">
             <span>Máquina:</span>
