--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,14 @@
 .container {
     width: 100%;
-    padding: 1rem 0;
+    padding: 2rem;
 
     .content {
         max-width: 800px;
         margin: 0 auto;
+    }
+    
+    button {
+        max-width: 400px;
+        width: 100%;
     }
 }
