--- a/src/app/components/parametro/parametro.component.scss
+++ b/src/app/components/parametro/parametro.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 2rem;
+    padding-bottom: 2rem;
 
     .content {
         display: flex;
