feat: atraso espelho/avanco

--- a/src/app/components/parametro/nanjing/nanjing.component.html
+++ b/src/app/components/parametro/nanjing/nanjing.component.html
@@ -61,12 +61,12 @@
         </div>
 
         <div class="atraso">
-            <h2>Atrasar</h2>
+            <h2>Atraso</h2>
             <div>
                 <span>Atrasar avanço</span>
-                <p>500</p>
+                <p>{{parametro.atrasarAvanco}}</p>
                 <span>Atrasar leitura <br> do espelho</span>
-                <p>1500</p>
+                <p>{{parametro.atrasarLeituraEspelho}}</p>
             </div>
         </div>
     </div>
