--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,11 @@
         max-width: 800px;
         margin: 0 auto;
     }
+
+    .btn {
+        display: flex;
+        justify-content: center;
+    }
     
     button {
         max-width: 400px;
