style: font + gap

--- a/src/app/components/parametro/yang-guan/yang-guan.component.html
+++ b/src/app/components/parametro/yang-guan/yang-guan.component.html
@@ -59,20 +59,20 @@
 
             <div class="qtd">
                 <h2>Qtd voltas</h2>
-                <div>
+                <div class="separacao">
                     <span>QTD DE VOLTAS FRONTAL</span>
                     <p>{{parametro.qtdVoltasFrontal}}</p>
                 </div>
-                <div>
+                <div class="separacao">
                     <span>QTD DE VOLTAS TRASEIRO</span>
                     <p>{{parametro.qtdVoltasTraseira}}</p>
                 </div>
                 <h2>Pressão</h2>
-                <div>
+                <div class="separacao">
                     <span>PRESSÃO LAPIDADO</span>
                     <p>{{parametro.pressaoLapidado}}</p>
                 </div>
-                <div>
+                <div class="separacao">
                     <span>PRESSÃO LIXADO</span>
                     <p>{{parametro.pressaoLixado}}</p>
                 </div>
