--- a/src/app/components/parametro/parametro.component.scss
+++ b/src/app/components/parametro/parametro.component.scss
@@ -14,6 +14,12 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
+        .gap {
+            span {
+                font-weight: 500;
+            }
+        }
     }
 
 
