--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,5 @@
 .container {
-    width: 100%;
+    min-height: 100%;
+    height: 100%;
     padding: 1rem;
-
-    .content {
-        max-width: 800px;
-        margin: 0 auto;
-    }
-
-    .btn {
-        display: flex;
-        justify-content: center;
-    }
-    
-    button {
-        max-width: 400px;
-        width: 100%;
-    }
 }
