--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,24 @@
 <div class="container">
-    <app-search (parametroSelected)="handleTypeSelected($event)"></app-search>
-    <div class="content">
-        <div *ngIf="parametro?.maquina === 'YG' ">
-            <app-yang-guan [parametro]="parametro"></app-yang-guan>
-        </div>
-        <div *ngIf="parametro?.maquina === 'NJ' ">
-            <app-nanjing [parametro]="parametro"></app-nanjing>
-        </div>
-        <div class="btn">
-            <button mat-raised-button color="warn" *ngIf="!!parametro" (click)="clear()">CANCELAR</button>
-        </div>
+  <app-search (parametroSelected)="handleTypeSelected($event)"></app-search>
+  <div class="content">
+    <div *ngIf="parametro?.maquina === 'YG'">
+      <app-yang-guan [parametro]="parametro"></app-yang-guan>
     </div>
+    <div *ngIf="parametro?.maquina === 'NJ'">
+      <app-nanjing [parametro]="parametro"></app-nanjing>
+    </div>
+    <div class="btn">
+      <button
+        mat-raised-button
+        color="warn"
+        *ngIf="!!parametro"
+        (click)="clear()"
+      >
+        CANCELAR
+      </button>
+    </div>
+  </div>
+  <div class="options">
+    <app-btn-options></app-btn-options>
+  </div>
 </div>
