--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,18 +1,24 @@
 .container {
+  width: 100%;
+
+  .content {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .btn {
+    display: flex;
+    justify-content: center;
+  }
+
+  button {
+    max-width: 400px;
     width: 100%;
+  }
 
-    .content {
-        max-width: 800px;
-        margin: 0 auto;
-    }
-
-    .btn {
-        display: flex;
-        justify-content: center;
-    }
-    
-    button {
-        max-width: 400px;
-        width: 100%;
-    }
+  .options {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+  }
 }
