--- a/src/app/components/parametro/launch/launch.component.scss
+++ b/src/app/components/parametro/launch/launch.component.scss
@@ -1,12 +1,30 @@
 .container {
-    .content {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: .7rem;
+    width: 100%;
 
-        mat-form-field {
-            max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .content {
+        max-width: 400px;
+        width: 100%;
+
+        div {
+            width: 100%;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: .7rem;
+
+            mat-form-field {
+                width: 100%;
+            }
         }
+
+    }
+
+    .nj {
+        width: 100%;
     }
 }
