--- a/src/app/components/parametro/nanjing/nanjing.component.html
+++ b/src/app/components/parametro/nanjing/nanjing.component.html
@@ -35,7 +35,7 @@
                 <!-- Name B1 -->
                 <ng-container matColumnDef="b1">
                     <th mat-header-cell *matHeaderCellDef> B1 </th>
-                    <td mat-cell *matCellDef="let element"> {{element.a1}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.b1}} </td>
                 </ng-container>
                 <!-- Weight B2 -->
                 <ng-container matColumnDef="b2">
