chore: uppercase + launch toLowerCase

--- a/src/app/components/parametro/parametro.component.html
+++ b/src/app/components/parametro/parametro.component.html
@@ -3,7 +3,7 @@
         <div>
             <div class="gap">
                 <span>Part Number:</span>
-                <p>{{parametro.partNumber}}</p>
+                <p>{{parametro.partNumber | uppercase}}</p>
             </div>
             <div class="gap">
                 <span>Linha:</span>
@@ -20,7 +20,7 @@
         </div>
         <div class="gap">
             <span>Nome programa de corte:</span>
-            <p>{{parametro.nomeProgramaCorte}}</p>
+            <p>{{parametro.nomeProgramaCorte | uppercase}}</p>
         </div>
         <div class="gap">
             <span>Videa:</span>
