--- a/src/app/pages/lancamento/lancamento.component.scss
+++ b/src/app/pages/lancamento/lancamento.component.scss
@@ -1,6 +1,9 @@
 .container {
     width: 100%;
     text-align: center;
+    
+    max-width: 800px;
+    margin: 0 auto;
 
     h1 {
         padding: 1rem 0;
