--- a/src/app/components/parametro/launch/launch.component.scss
+++ b/src/app/components/parametro/launch/launch.component.scss
@@ -1,30 +1,50 @@
 .container {
-    width: 100%;
-
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
 
     .content {
-        max-width: 400px;
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
 
         div {
-            width: 100%;
-
             display: flex;
-            flex-direction: column;
+            flex-wrap: wrap;
             align-items: center;
-            gap: .7rem;
+            justify-content: center;
+            gap: 2rem;
+
+            h2 {
+                width: 100%;
+            }
 
             mat-form-field {
+                max-width: 340px;
                 width: 100%;
             }
         }
-
     }
 
     .nj {
         width: 100%;
+    }
+
+    button {
+        max-width: 400px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 780px) {
+    .container {
+        .content {
+            div {
+                mat-form-field {
+                    max-width: none;
+                }
+            }
+        }
     }
 }
