--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,10 +1,18 @@
 <div class="container">
     <h1>Procure o parâmetro</h1>
     <form class="form" [formGroup]="form">
-        <mat-form-field appearance="outline">
-            <mat-label>Part Number</mat-label>
-            <input matInput placeholder="Digite o Part Number..." formControlName="partNumber">
+
+        <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Number</mat-label>
+            <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
+                [matAutocomplete]="auto">
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onOptionSelected($event)">
+                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                    {{option | uppercase}}
+                </mat-option>
+            </mat-autocomplete>
         </mat-form-field>
+
         <mat-form-field appearance="outline">
             <mat-label>Linha</mat-label>
             <input matInput placeholder="Digite a linha..." formControlName="line">
