--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,7 +4,7 @@
 
         <mat-form-field class="example-full-width" appearance="outline">
             <mat-label>Number</mat-label>
-            <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
+            <input type="text" placeholder="Pick one" aria-label="Number" matInput formControlName="partNumber"
                 [matAutocomplete]="auto">
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onOptionSelected($event)">
                 <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
