feat: visualizar coplanar

--- a/src/app/components/parametro/nanjing/nanjing.component.html
+++ b/src/app/components/parametro/nanjing/nanjing.component.html
@@ -69,5 +69,8 @@
                 <p>{{parametro.atrasarLeituraEspelho}}</p>
             </div>
         </div>
+
+        <app-coplanar [parametro]="parametro"></app-coplanar>
+
     </div>
 </app-parametro>
