--- a/src/app/components/parametro/nanjing/coplanar/coplanar.component.html
+++ b/src/app/components/parametro/nanjing/coplanar/coplanar.component.html
@@ -4,33 +4,33 @@
         <!-- Position Column -->
         <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td class="frase" mat-cell *matCellDef="let element"> {{element.position}} </td>
         </ng-container>
 
         <!-- Name S1 -->
         <ng-container matColumnDef="s1">
             <th mat-header-cell *matHeaderCellDef> S1 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s1}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s1}} </td>
         </ng-container>
         <!-- Weight S2 -->
         <ng-container matColumnDef="s2">
             <th mat-header-cell *matHeaderCellDef> S2 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s2}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s2}} </td>
         </ng-container>
         <!-- Name S3 -->
         <ng-container matColumnDef="s3">
             <th mat-header-cell *matHeaderCellDef> S3 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s3}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s3}} </td>
         </ng-container>
         <!-- Name S4 -->
         <ng-container matColumnDef="s4">
             <th mat-header-cell *matHeaderCellDef> S4 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s4}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s4}} </td>
         </ng-container>
         <!-- Name S5 -->
         <ng-container matColumnDef="s5">
             <th mat-header-cell *matHeaderCellDef> S5 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s5}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s5}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -44,33 +44,33 @@
         <!-- Position Column -->
         <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td class="frase" mat-cell *matCellDef="let element"> {{element.position}} </td>
         </ng-container>
 
         <!-- Name S1 -->
         <ng-container matColumnDef="s1">
             <th mat-header-cell *matHeaderCellDef> S1 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s1}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s1}} </td>
         </ng-container>
         <!-- Weight S2 -->
         <ng-container matColumnDef="s2">
             <th mat-header-cell *matHeaderCellDef> S2 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s2}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s2}} </td>
         </ng-container>
         <!-- Name S3 -->
         <ng-container matColumnDef="s3">
             <th mat-header-cell *matHeaderCellDef> S3 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s3}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s3}} </td>
         </ng-container>
         <!-- Name S4 -->
         <ng-container matColumnDef="s4">
             <th mat-header-cell *matHeaderCellDef> S4 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s4}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s4}} </td>
         </ng-container>
         <!-- Name S5 -->
         <ng-container matColumnDef="s5">
             <th mat-header-cell *matHeaderCellDef> S5 </th>
-            <td mat-cell *matCellDef="let element"> {{element.s5}} </td>
+            <td class="limite" mat-cell *matCellDef="let element"> {{element.s5}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
