--- a/src/app/components/parametro/launch/launch.component.scss
+++ b/src/app/components/parametro/launch/launch.component.scss
@@ -4,6 +4,8 @@
     align-items: center;
     gap: 2rem;
 
+    padding-bottom: 1.5rem;
+
     .content {
         display: flex;
         flex-direction: column;
@@ -31,9 +33,17 @@
         width: 100%;
     }
 
-    button {
-        max-width: 400px;
+    .btn {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: .5rem;
+        
+        button {
+            max-width: 400px;
+            width: 100%;
+        }
     }
 }
 
